<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragHome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragHome_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/research_tree_background"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/fragHome_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="@color/research_treeGroups_backgroundOverColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fragHome_A"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="120dp"
        android:minWidth="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="70dp"
        android:foreground="@drawable/round_edge_border"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toTopOf="@id/fragHome_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragHome_A_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/starbase_background"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/fragHome_A_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:background="@color/research_treeGroups_backgroundOverColor" />

        <TextView
            android:id="@+id/fragHome_A_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/interstate_extra_light"
            android:gravity="center"
            android:text="@string/progress_A"
            android:textAllCaps="true"
            android:textColor="@color/textColor_white"
            android:textSize="36sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragHome_B"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="120dp"
        android:minWidth="200dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="10dp"
        android:foreground="@drawable/round_edge_border"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toTopOf="@id/fragHome_C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragHome_A">

        <ImageView
            android:id="@+id/fragHome_B_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/research_background"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/fragHome_B_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:background="@color/research_treeGroups_backgroundOverColor" />

        <TextView
            android:id="@+id/fragHome_B_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/interstate_extra_light"
            android:gravity="center"
            android:text="@string/progress_B"
            android:textAllCaps="true"
            android:textColor="@color/textColor_white"
            android:textSize="36sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragHome_C"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="120dp"
        android:minWidth="200dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="10dp"
        android:foreground="@drawable/round_edge_border"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toTopOf="@id/fragHome_D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragHome_B">

        <ImageView
            android:id="@+id/fragHome_C_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/officer_background"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/fragHome_C_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:background="@color/research_treeGroups_backgroundOverColor" />

        <TextView
            android:id="@+id/fragHome_C_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/interstate_extra_light"
            android:gravity="center"
            android:text="@string/progress_C"
            android:textAllCaps="true"
            android:textColor="@color/textColor_white"
            android:textSize="36sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragHome_D"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="120dp"
        android:minWidth="200dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:foreground="@drawable/round_edge_border"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragHome_C">

        <ImageView
            android:id="@+id/fragHome_D_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ship_background"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/fragHome_D_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:background="@color/research_treeGroups_backgroundOverColor" />

        <TextView
            android:id="@+id/fragHome_D_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/interstate_extra_light"
            android:gravity="center"
            android:text="@string/progress_D"
            android:textAllCaps="true"
            android:textColor="@color/textColor_white"
            android:textSize="36sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>